# swill

./: LICENSE  README.md  requirements.txt
clients/typescript/: README.md  package.json  tsconfig.json
clients/typescript/src/: client.ts  index.ts  requests.ts  response.ts  types.ts  util.ts
server/: README.md  setup.cfg  setup.py  tox.ini
server/swill/: __init__.py  _connection.py  _exceptions.py  _handlers.py  _helpers.py  _introspect.py  _protocol.py  _request.py  _response.py  _serialize.py  _types.py  app.py  asgi.py  config.py  logging.py  testing.py  validators.py
server/tests/: conftest.py  helpers.py  test_app.py  test_asgi.py  test_client.py  test_config.py  test_handlers.py  test_queue.py  test_request.py  test_response.py  test_serialize.py
swill/: __init__.py  _exceptions.py  _handlers.py  _protocol.py  _request.py  _serialize.py  _types.py  app.py  asgi.py
