[metadata]
name = Swill
version = attr: swill.__version__
url = https://chris.stranex.com/swill
project_urls =
    Documentation = https://swill.readthedocs.io
    Source Code = https://github.com/cstranex/swill
    Issue Tracker = https://github.com/cstranex/swill
license = BSD-3-Clause
author = Chris Stranex
author_email = chris@stranex.com
description = An ASGI framework for creating RPC backends with WebSockets and MsgPack
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = = swill
include_package_data = True
python_requires = >= 3.9
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = swill

[tool:pytest]
asyncio_mode = auto
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    swill
    tests

[coverage:paths]
source =
    swill
    */site-packages

max-line-length = 100
per-file-ignores =
    # __init__ exports names
    swill/__init__.py: F401

[mypy]
files = swill/flask
python_version = 3.8
show_error_codes = True
allow_redefinition = True
disallow_subclassing_any = True
# disallow_untyped_calls = True
# disallow_untyped_defs = True
# disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
# no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
# warn_return_any = True
# warn_unreachable = True
